--- a/app/assets/stylesheets/layouts.css
+++ b/app/assets/stylesheets/layouts.css
@@ -4,7 +4,7 @@
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
   color: black;
-  font-size: 24px;
+  font-size: 36px;
 }
 
 html,
@@ -82,8 +82,9 @@ a:link, a:visited {
 /*header*/
 .header-container {
   width: 100%;
-  height: 120px;
-  background: rgba(250,250,250,1);
+  height: 118px;
+  background: rgba(245,245,245,0);
+  border-bottom: 2px solid black;
 }
 
 .header-container .header {
@@ -96,7 +97,7 @@ a:link, a:visited {
   width: 960px;
   display: block;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 30px;
 }
 
 .header-container .logo h1 {
@@ -110,15 +111,31 @@ a:link, a:visited {
   -ms-user-select: none;
 }
 
-.header-container .nav-buttons {
+.nav-buttons {
   width: 70px;
-  right: 0;
-  display: inline;
+  display: block;
+  position: absolute;
+  top: 50px;
+  right: 20%;
+  z-index: 99999999;
+
 }
 
 .footer {
-  border: 1px solid black;
   width: 100%;
-  height: 30px;
+  height: 50px;
   text-align: center;
+  background: rgba(40,40,40,1);
+}
+
+#top-link {
+  position: fixed;
+  bottom: 5%;
+  right: 10%;
+}
+
+
+.footer p {
+  color: white;
+  line-height: 50px;
 }
