--- a/app/views/venues/_add.html.erb
+++ b/app/views/venues/_add.html.erb
@@ -3,8 +3,7 @@
   <div class="item-select-container">
 
       <div class="add-text">
-        <h2>Can you do better? </h2>
-        <h3>Suggest clothing for the <%= @venue.name.titleize %>. Tag what you love.</h3>
+        <h2>Something missing? Suggest clothing for the <%= @venue.name.titleize %>. </h2>
       </div>
 
       <div class="select-item">
