--- a/app/views/venues/_add.html.erb
+++ b/app/views/venues/_add.html.erb
@@ -3,7 +3,7 @@
   <div class="item-select-container">
 
       <div class="add-text">
-        <h2>Something missing? Suggest clothing for the <%= @venue.name.titleize %>. </h2>
+        <h2>Something missing? Suggest clothes and accessories for <%= @venue.name.titleize %>. </h2>
       </div>
 
       <div class="select-item">
