--- a/app/views/venues/_show.html.erb
+++ b/app/views/venues/_show.html.erb
@@ -1,7 +1,7 @@
 <div class="show">
 
   <div class="clothes">
-    <h3>Wear these clothes at <%= @venue.name.titleize %> </h3>
+    <h2>What to wear at <%= @venue.name.titleize %> </h2>
 
     <div class="items-container">
 
@@ -38,8 +38,6 @@
 
       <a href="#"><span class="entypo-right-open-big"></span></a></br>
       <a href="#", class='add-tags'>+</a>
-      <span class='plus'>add clothes</span>
-
 
     </div>
 
