--- a/app/views/venues/_add-tab.html.erb
+++ b/app/views/venues/_add-tab.html.erb
@@ -4,8 +4,8 @@
     <div class="tab-venue-menu">
       <h3>What would you would wear to <%= @venue.name.titleize %>?</h3>
       <ul>
-        <li><a href="#" id='confirm'>Confirm</a></li>
-        <li><a href="#", id='back-home'>Back</a></li>
+        <li><a href="#" id='confirm'><span class="entypo-check"></span></a></li>
+        <li><a href="#", id='back-home'><span class="entypo-cancel"></span></a></li>
       </ul>
     </div>
 
