--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -56,7 +56,6 @@ $('.venue-menu ul li:nth-child(1)').click(function(event){
   $('.venue-menu ul li:nth-child(1)').css('background', 'rgba(250,250,250,1)');
   $('.venue-menu ul li:nth-child(2)').css('background', 'transparent');
   $('.venue-menu ul li:nth-child(3)').css('background', 'transparent');
-
 });
 
 $('.venue-menu ul li:nth-child(2)').click(function(event){
@@ -69,7 +68,6 @@ $('.venue-menu ul li:nth-child(2)').click(function(event){
   $('.venue-menu ul li:nth-child(1)').css('background', 'transparent');
   $('.venue-menu ul li:nth-child(2)').css('background', 'rgba(250,250,250,1)');
   $('.venue-menu ul li:nth-child(3)').css('background', 'transparent');
-
 });
 
 $('.venue-menu ul li:nth-child(3)').click(function(event){
@@ -82,7 +80,6 @@ $('.venue-menu ul li:nth-child(3)').click(function(event){
   $('.venue-menu ul li:nth-child(1)').css('background', 'transparent');
   $('.venue-menu ul li:nth-child(2)').css('background', 'transparent');
   $('.venue-menu ul li:nth-child(3)').css('background', 'rgba(250,250,250,1)');
-
 });
 
 $('.venue-tab').click(function(event){
@@ -97,21 +94,18 @@ $('.venue-tab').click(function(event){
 </script>
 
 <script>
-
-//display and remove .add div (user clothing tagging)
-
-
-</script>
-
-<script>
 //change header when .add div is displayed
-
+//display and remove .add div (user clothing tagging)
 $(document).ready(function(){
   $(".add-tags").click(function(event){
     event.preventDefault();
-    $(".add").fadeIn(1000);
-    $(".fixed-top").fadeOut(100);
-    $(".tab-fixed-top").fadeIn(500);
+    $(".fixed-top").slideUp('fast', function() {
+      setTimeout(500);  
+      $(".tab-fixed-top").slideDown('fast', function() {
+        setTimeout(2000);
+        $(".add").slideDown(800);
+      });
+    });
   });
  
   $('#back-home').click(function(){
@@ -124,27 +118,10 @@ $(document).ready(function(){
 
   });
 });
-
-// function adjustTabOpacity() {
-//   var $tabCache = $('.tab-fixed-top');
-
-//   if ($(window).scrollTop() > 140) {
-//     $tabCache.css({'position': 'fixed', 'top': '0'});
-//     $('.venue-content').css('margin-top','50px');
-//   } else {
-//     $tabCache.css({'position': 'relative', 'top': 'auto'});
-//     $('.venue-content').css('margin-top','0');
-//   }
-// }
-
-// $(window).scroll(adjustTabOpacity);
-
-// adjustTabOpacity();
-
-
 </script>
 
 <script>
+//fix .add div
 function fixTabDiv() {
     var $tabCache = $('.tab-fixed-top');
 
@@ -158,22 +135,8 @@ function fixTabDiv() {
 
   }
 
-  // function adjustTabOpacity() {
-  //   var $tabOpacity = $('.tab-fixed-top');
-
-  //     if ($(window).scrollTop() > 180) {
-  //       $tabOpacity.css({'opacity', '0.5'});
-  //     } else {
-  //       $tabOpacity.css({'opacity', '1'});
-  //     }
-  // }
-
 $(window).scroll(fixTabDiv);
-// $(window).scroll(adjustTabOpacity);
-
-
 fixTabDiv();
-// adjustTabOpacity();
 
 </script>
 
