add crap t doesn't work

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,6 +66,7 @@
 
 
 
+
 <script src="assets/bootstrap.js"></script>
 
 <%= javascript_tag do %>
@@ -76,4 +77,13 @@
   $("#venue").autocomplete({
     source: venueNames
   });
+</script>
+
+<script>
+// $(document.body).click(function () {
+// console.log("hi");
+// $("html, body").animate({scrollTop:$(window).scrollTop() + 900});
+// return false;
+// });
+
 </script>
