--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,46 +1,37 @@
-<%= @params %>
+<div class="zappos-items-container">
 
-<% @zappos_results.each do |z| %>
+  <% @zappos_results.each do |z| %>
 
-  <div class="zappos-item">
-    <div class="zappos-image">
-      <img src="<%= z[:item][:img_url] %>" />
-    </div>
+    <div class="zappos-item">
+      <div class="zappos-image">
+        <img src="<%= z[:item][:img_url] %>" />
+      </div>
 
-    <div class="zappos-info">
-      <%= form_for(@item) do |f| %>
-        <%= f.hidden_field :name, :value => z[:item][:name] %>
-        <%= f.hidden_field :brand, :value => z[:item][:brand]  %>
-        <%= f.hidden_field :price, :value => z[:item][:price]  %>
-        <%= f.hidden_field :item_url, :value => z[:item][:item_url]  %>
-        <%= f.hidden_field :img_url, :value => z[:item][:img_url]  %>
-        <%= f.hidden_field :gender, :value => z[:item][:gender]  %>
-        <%= f.hidden_field :category, :value => @category %>
-        <%= f.hidden_field :tag, :value => @tag %>
-        <%= f.submit "+" %>
-      <% end %>
+      <div class="zappos-info">
+        <%= form_for(@item) do |f| %>
+          <%= f.hidden_field :name, :value => z[:item][:name] %>
+          <%= f.hidden_field :brand, :value => z[:item][:brand]  %>
+          <%= f.hidden_field :price, :value => z[:item][:price]  %>
+          <%= f.hidden_field :item_url, :value => z[:item][:item_url]  %>
+          <%= f.hidden_field :img_url, :value => z[:item][:img_url]  %>
+          <%= f.hidden_field :gender, :value => z[:item][:gender]  %>
+          <%= f.hidden_field :category, :value => @category %>
+          <%= f.hidden_field :tag, :value => @tag %>
+          <%= f.submit "+" %>
+        <% end %>
 
-      <div class="zappos-text-info">
-        <div><%= z[:item][:brand] %></div>
-        <div><%= z[:item][:price] %></div>
+        <div class="zappos-text-info">
+          <div><%= z[:item][:brand] %></div>
+          <div><%= z[:item][:price] %></div>
+        </div>
+
       </div>
 
     </div>
+  <% end %>
 
-  </div>
-<% end %>
+</div>
 
-<div><button class="add-all">Add All</button></div>
-
-<script>
-
-  // $(".zappos-image img")
-  // .error(function(){
-  //   $(this).hide();
-  // })
-  // .attr("src", "missing.png");
-
-</script>
 
 <script>
 
@@ -49,23 +40,6 @@ $('input[type="submit"]').click(function(event){
   $(this).addClass( "waiting-add" );
   $(this).css('background','black');
 })
-
-$('.add-all').click(function(){
-
-  $('.waiting-add').each(function() {
-    var form = $(this).parents('form');
-
-    $.ajax({
-      url: form.attr("action"),
-      type: form.attr("method"),
-      data: form.serialize(),
-      success: function(data) {
-      }
-    })
-  })
-
-})
-
 
 </script>
 
