--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
 
   <div class="search">
     <div class='search-bar'>
-      <%= form_tag(controller: "venues", action: "search", method: "get") do %>
+      <%= form_tag({controller: "venues", action: "search"}, method: :get) do %>
       <%= text_field_tag(:venue, nil, placeholder: 'Where do you want to go?') %>
       <%= radio_button_tag(:gender, "m", true) %><%= label_tag(:gender_m, "Man") %>
       <%= radio_button_tag(:gender, "f") %><%= label_tag(:gender_f, "Woman") %>
