changed alternate header

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -19,7 +19,7 @@
 <div class="alternate-fixed-top">
   <div class="alternate-venue-menu-container">
     <div class="alternate-venue-menu">
-      <h3>What would you would wear to <%= @venue.name.titleize %>?</h3>
+      <h3>What to wear at <%= @venue.name.titleize %>?</h3>
       <ul>
         <li><a href="#" id='confirm'><span class="entypo-check"></span></a></li>
         <li><a href="#", id='back-home'><span class="entypo-cancel"></span></a></li>
@@ -37,7 +37,6 @@
     </div>
   </section>
 </div>
-
 
 <script>
 // fixed header on scroll
