hover tag working

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,10 +1,9 @@
 <div class="zappos-items-container">
-  <%= @params %>
   <% @zappos_results.each do |z| %>
 
     <div class="zappos-item">
       <div class="zappos-image">
-        <img src="<%= z[:item][:img_url] %>" />
+        <a href="<%=z[:item][:item_url]%>" target="_blank"><img src="<%= z[:item][:img_url] %>" /></a>
       </div>
 
       <div class="zappos-info">
@@ -34,6 +33,12 @@
 
 
 <script>
+
+$(".zappos-info").hover(function(){
+    $(this).animate({ bottom: '0' });
+}, function() {
+    $(this).animate({ bottom: '-80px' });
+});
 
 $('input[type="submit"]').click(function(event){
   event.preventDefault();
