--- a/app/assets/stylesheets/venue.css
+++ b/app/assets/stylesheets/venue.css
@@ -149,14 +149,22 @@
 
 .details div:nth-child(3) {
   width: 30%;
-  margin-top: 40px;
-  float: left;
+  float: right;
+  height: 100%;
+  overflow: scroll;
 }
 
-.details div:nth-child(3) p {
+.details div:nth-child(3) div {
+  display: block;
+  margin-right: 8%;
+  width: 80%;
+  padding-top: 20%;
   text-align: center;
-  margin: 0;
-  padding: 0;
+  float: right;
+}
+
+.details div:nth-child(3) div p {
+  padding: 5px;
   font-size: 16px;
 }
 
@@ -166,26 +174,44 @@
   display: none;
 }
 
+.weather-item {
+  padding-top: 20px;
+  float: left;
+  height: 100%;
+  width: 20%;
+  text-align: center;
+}
+
+.weather-item h3{
+  font-weight: 400;
+}
+
+.weather-item img {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+}
+
 /*tags*/
 
 .venue-tab .tags {
   display: none;
+  overflow: scroll;
 }
 
 .tags div {
-  float: left;
-  margin: 5%;
+  display: block;
+  margin: 0 auto;
+  padding-top: 5%;
+  text-align: center;
 }
 
-.tags div ul {
-  margin-left: 0;
-  padding-left: 0;
-  list-style: none;
-}
-
-.tags div ul li{
-  font-size: 20px;
+.tags div span{
+  font-size: 28px;
   color: black;
-  padding: 5px;
+  padding: 10px;
+  margin: 10px;
   display: inline;
+  font-weight: 800;
+  background: rgba(241, 196, 15,1.0);
 }
