--- a/app/assets/stylesheets/add.css
+++ b/app/assets/stylesheets/add.css
@@ -162,7 +162,7 @@
   color: grey;
 }
 
-.zappos-info input[type="submit"]hover {
+.zappos-info input[type="submit"]:hover {
   background: white;
 }
 
