logic correct; implement on page

--- a/app/views/venues/_show.html.erb
+++ b/app/views/venues/_show.html.erb
@@ -4,12 +4,8 @@
     <h2>What to wear at <%= @venue.name.titleize %> </h2>
     <div class="items-container">
 
-      <div class='tagged_items'>
-        <% @venue.tags.each do |tag|  %>
-    <p> <%= tag['name']      %> </p>
-        <%  end                       %>
-      </div>
      
+  <% @item_search.each %>
       <div class="items-block">
         <div class="items">
           <a href="image_url"><img src="http://imagesecaw.ctscdn.com/image/263/375/d42652d7-2472-401c-85f7-f7c792dee96d.jpg" /></a>
