--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,7 +66,7 @@
 
 
 
-<script src="assets/bootstrap.js"></script>
+<%= javascript_include_tag("bootstrap.js")%>
 
 <%= javascript_tag do %>
     var venueNames = <%= @venue_names.to_json.html_safe %>
