front-end merger

--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -1,28 +1,22 @@
-<section class="heroes-container">
-  <div class="heroes">
-    Working Process
+<div class="team-container">
+
+  <div class="member">
+    <div class="member-image"><%= image_tag("lior.jpg") %></div>
+    <div class="name"><a href="mailto:lior.bendat@gmail.com"><h3>Lior Bendat</h3></a></div>
   </div>
-</section>
 
-<section class="heroes-container">
-  <div class="heroes">
-    <div class="team-member">
-      <%= image_tag("lior"), :class => 'lior'%>
-    </div>
-    <div class="team-member">
-      <%= image_tag("ian"), :class => 'ian'%>
-    </div>
-    <div class="team-member">
-      <%= image_tag("ian"), :class => 'ian'%>
-    </div>
-    <div class="team-member">
-      D
-    </div>
+  <div class="member">
+    <div class="member-image"><%= image_tag("ian.jpg") %></div>
+    <div class="name"><a href="mailto:ian@ianyang.co"><h3>Ian Yang</h3></a></div>
   </div>
-</section>
 
-<script>
-$(document).ready(function) {
+  <div class="member">
+    <div class="member-image"><%= image_tag("brian.jpg") %></div>
+    <div class="name"><a href="mailto:schroer.brian@gmail.com"><h3>Brian Schroer</h3></a></div>
+  </div>
 
-
-}
+  <div class="member">
+    <div class="member-image"><%= image_tag("lauren.jpg") %></div>
+    <div class="name"><a href="lauren.havertz@gmail.com"><h3>Lauren Havertz</h3></a></div>
+  </div>
+</div>
