--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,5 @@
 <div class="zappos-items-container">
+  <%= @params %>
   <% @zappos_results.each do |z| %>
 
     <div class="zappos-item">
@@ -44,6 +45,10 @@ $('input[type="submit"]').click(function(event){
   event.preventDefault();
   $(this).addClass( "waiting-add" );
   $(this).css('background','black');
+})
+
+$("a img").error(function(){
+    $(this).parent().parent().parent().hide();
 })
 
 </script>
