--- a/app/assets/stylesheets/add.css
+++ b/app/assets/stylesheets/add.css
@@ -100,7 +100,7 @@
   float: left;
   overflow: hidden;
   background: white;
-  margin: 19px;
+  margin: 15px;
   padding: 0;
   position: relative;
   border: 1px solid rgba(220,220,220,1);
@@ -138,7 +138,7 @@
 }
 
 .zappos-info input[type="submit"]:hover {
-  background: white;
+  background: rgba(241, 196, 15,1.0);
 }
 
 .zappos-info .zappos-text-info {
@@ -167,3 +167,34 @@
   text-align: center;
   margin-top: 30px;
 }
+
+.more-items {
+  display: block;
+  position: relative;
+  width: 100%;
+  clear: left;
+  padding-top: 30px;
+}
+
+.more-items button {
+  width: 480px;
+  height: 45px;
+  background: rgba(240,240,240,1);
+  margin: 30px auto;
+  border: 1px solid rgba(180,180,180,0.8);
+  display: block;
+}
+
+.more-items button:hover {
+  background: rgba(241, 196, 15,1.0);
+  color: white;
+  -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
+}
+
+
+
+
+
