--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -1,67 +1,25 @@
-/*container for list of items*/
-
-
-.clothes, .shoes, .accessories {
-  width: 100%;
-  border-bottom: 5px solid black;
-  overflow: hidden;
-}
-
-
-/*items and items container*/
-
 .items-container {
-  width: 95%;
-  float: left;
-}
-
-.items-container .items-block {
-  width: 33%;
-  float: left;
-  height: 400px;
-  margin: 10px 0 25px 0;
+  width: 960px;
+  margin: 0 auto;
+  position: relative;
+  height: 100%;
 }
 
 .items {
-  width: 90%;
+  width: 880px;
   height: 100%;
-  position: relative;
-  margin: 0 auto;
+  margin: 0;
   overflow: hidden;
 }
-
-.items img {
-  position: relative;
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-  height: auto;
-}
-
-.items .likes {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 30px;
-  background: rgba(0,0,0,0.8);
-}
-
-.items .likes button {
-  display: block;
-  height: 30px;
-  margin: 0 auto;
-  width: 60px;
-  background-color: transparent;
-  border: none;
-  color: white;
-}
-
 
 /*more clickables*/
 
 .more {
-  float: right;
-  width: 5%;
+  width: 70px;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  height: 100%;
 }
 
 .more [class*="entypo-"]:before {
@@ -75,10 +33,62 @@
   color: black;
 }
 
-.plus {
-  z-index: 999999;
-}
-
 .entypo-up-open-big {
   margin-right: -32px;
 }
+
+/* dynamic items, images and items container shit */
+
+.tagged-item {
+  width: 260px;
+  height: 315px;
+  float: left;
+  overflow: hidden;
+  background: white;
+  margin: 19px;
+  padding: 0;
+  position: relative;
+  border: 1px solid rgba(220,220,220,1);
+}
+
+.tagged-item-image {
+  width: 100%;
+  overflow: hidden;
+}
+
+.tagged-item-image img {
+  width: 120%;
+  display: block;
+  margin: 0 auto 0 -10%;
+}
+
+.tagged-items-text-info {
+  background: rgba(236, 240, 241,0.9);
+  width: 100%;
+  height: 120px;
+  position: absolute;
+  left: 0;
+  bottom: -81px;
+}
+
+.tagged-items-text-info div:nth-child(1) {
+  color: grey;
+  font-weight: 100;
+  width: 60%;
+  float: left;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 9px;
+}
+
+.tagged-items-text-info div:nth-child(2){
+  color: grey;
+  font-weight: 100;
+  width: 38%;
+  float: right;
+  font-size: 18px;
+  border-left: 1px solid white;
+  text-align: center;
+  margin-top: 9px;
+}
+
