--- a/app/views/venues/_show.html.erb
+++ b/app/views/venues/_show.html.erb
@@ -9,7 +9,7 @@
       <div class="tagged-item">
 
         <div class="tagged-item-image">
-          <img src="<%= item[:img_url] %>" />
+          <a href="<%= item[:item_url] %>" target="_blank"><img src="<%= item[:img_url] %>" /></a>
         </div>
 
         <div class="tagged-items-text-info">
