--- a/app/assets/stylesheets/add.css
+++ b/app/assets/stylesheets/add.css
@@ -184,6 +184,7 @@
   margin: 30px auto;
   border: 1px solid rgba(180,180,180,0.8);
   display: block;
+  color: rgba(120,120,120,1);
 }
 
 .more-items button:hover {
