--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -67,20 +67,6 @@
   font-size: 14px;
 }
 
-/*
-.search-bar span {
-  width: 60px;
-  height: 30px;
-  margin-left: 2px;
-  padding: 0;
-  border: 2px solid rgba(127, 140, 141,0.5);
-  display: block;
-  float: left;
-  color: grey;
-  text-align: center;
-  line-height: 30px;
-}*/
-
 input[type="radio"] {
   display: none;
 }
@@ -101,6 +87,10 @@ label {
 label:hover {
   background: rgba(157, 170, 171,1.0);
   color: white;
+  -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
 }
 
 input[type="radio"]:checked + label{
