--- a/app/views/venues/_tab.html.erb
+++ b/app/views/venues/_tab.html.erb
@@ -3,7 +3,7 @@
   <div class="details">
 
     <div>
-      <img src="<%= @venue.img_url %>" />
+      <a href="<%= @venue.biz_url %>" target="_blank"><img src="<%= @venue.img_url %>" /></a>
     </div>
 
     <div>
