--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,7 +41,7 @@
   <div class="heroes-3">
 
     <div class="image-3">
-      <%= image_tag("mac.png", :alt => :shirts) %>
+      <%= image_tag("new compy copy.png", :alt => :shirts) %>
     </div>
 
     <div class="blurb-3">
