--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
   <div class="heroes-2">
     <div class="blurb-2">
       <h1>Tailored inspiration</h1>
-      <h3>/ Intelligent algorithm that takes every factor into account: venue location, crowd and even weather. We pay attention so you don't have to /</h3>
+      <h3>Intelligent algorithm that takes every factor into account: venue location, crowd and even weather. We pay attention so you don't have to</h3>
     </div>
     <div class="image-2">
       <%= image_tag("shirts.png", :alt => :shirts) %>
@@ -46,7 +46,7 @@
 
     <div class="blurb-3">
       <h1>Powered by Zappos</h1>
-      <h3>/ Thousands of clothing items from Zappos curated under one view /</h3>
+      <h3>Thousands of clothing items from Zappos curated under one view</h3>
     <div>
   </div>
 </section>
@@ -55,7 +55,7 @@
   <div class="heroes-4">
     <div class="blurb-4">
       <h1>Tick Tock Tag</h1>
-      <h3>/ Are you a fashionista? Tag your outfits to your favorite venues /</h3>
+      <h3>Are you a fashionista? Tag your outfits to your favorite venues</h3>
     </div>
     <div class="image-4">
       <%= image_tag("tags.png")%>
