--- a/app/assets/stylesheets/venue.css
+++ b/app/assets/stylesheets/venue.css
@@ -203,6 +203,7 @@
   margin: 0 auto;
   padding-top: 5%;
   text-align: center;
+  height: 90%;
 }
 
 .tags div span{
@@ -213,4 +214,5 @@
   display: inline;
   font-weight: 800;
   background: rgba(241, 196, 15,1.0);
+  float: left;
 }
