--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -2,7 +2,7 @@
 
   <div class="member">
     <div class="member-image"><%= image_tag("lior.jpg") %></div>
-    <div class="name"><a href="mailto:lior.bendat@gmail.com"><h3>Lior Bendat</h3></a></div>
+    <div class="name"><a href="mailto:liorbendat@gmail.com"><h3>Lior Bendat</h3></a></div>
   </div>
 
   <div class="member">
@@ -17,6 +17,6 @@
 
   <div class="member">
     <div class="member-image"><%= image_tag("lauren.jpg") %></div>
-    <div class="name"><a href="lauren.havertz@gmail.com"><h3>Lauren Havertz</h3></a></div>
+    <div class="name"><a href="mailto:lauren.havertz@gmail.com"><h3>Lauren Havertz</h3></a></div>
   </div>
 </div>
