--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -1,2 +1,34 @@
+.contact-container {
+  width: 960px;
+  margin: 0 auto;
+  background: rgba(250,250,250,1);
+  height: 560px;
+}
 
+.contact-container h1 {
+  margin: 0;
+  padding: 50px;
+  font-weight: 400;
+  text-align: center;
+}
 
+.name_label, .email_label, .comment {
+  display: block;
+  width: 480px;
+  margin: 5px auto;
+  height: 50px;
+}
+
+.contact-container label {
+  width: 160px;
+  margin-right: 40px;
+}
+
+.name_label input, .email_label input, .comment input {
+  width: 240px;
+  height: 30px;
+}
+
+.contact-container input[type=submit] {
+  margin-top: 100px;
+}
