--- a/app/views/venues/_tab.html.erb
+++ b/app/views/venues/_tab.html.erb
@@ -9,7 +9,7 @@
     <div>
       <ul>
         <li><p><%= @venue.address_1 %>, <%= @venue.address_2 %></p></li>
-        <li><p><%= @venue.neighborhood_name %></p></li>
+        <li><p><%= @venue.neighborhood_name.titleize %></p></li>
         <li><p><%= @venue.rating.to_i %>/5</p></li>
     </div>
 
