Remove slashes from review snippet

--- a/app/views/venues/_tab.html.erb
+++ b/app/views/venues/_tab.html.erb
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-      <div><p>/ <%=@venue.snippet_text %> /</p></div>
+      <div><p> <%=@venue.snippet_text %> </p></div>
     </div>
 
   </div>
