put js in separate files

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -71,6 +71,16 @@
   position: absolute;
   left: 0;
   bottom: -50px;
+  transition: bottom .2s ease-in-out;
+  -webkit-transition: bottom .2s ease-in-out;
+  -moz-transition: bottom .2s ease-in-out;
+  -o-transition: bottom .2s ease-in-out;
+  -ms-transition: bottom .2s ease-in-out;
+
+}
+
+.tagged-items-text-info:hover {
+  bottom: 0;
 }
 
 .tagged-items-text-info div:nth-child(1) {
