--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -31,24 +31,4 @@
 
 </div>
 
-
-<script>
-
-$(".zappos-info").hover(function(){
-    $(this).animate({ bottom: '0' });
-}, function() {
-    $(this).animate({ bottom: '-80px' });
-});
-
-$('input[type="submit"]').click(function(event){
-  event.preventDefault();
-  $(this).addClass( "waiting-add" );
-  $(this).css('background','black');
-})
-
-$("a img").error(function(){
-    $(this).parent().parent().parent().hide();
-})
-
-</script>
-
+<%= javascript_include_tag "item.js" %>
